# AutonomousFireDataCollect

./: .gitignore  README.md
Data Processing/: README.md  data_plotter.m
Electronics/: README.md
Electronics/Atmega328p-GPS/src/: TinyGPS++.h  main.cpp
Electronics/Atmega32U4-SerialBridge/: platformio.ini
Electronics/Atmega32U4-SerialBridge/src/: main.cpp
Electronics/Sensors-MCU-Teensy/: platformio.ini
Electronics/Sensors-MCU-Teensy/src/: main.cpp
Electronics/Sensors-Teensy4.0/src/: Adafruit_BME680.h  main.cpp
Electronics/code/Sensors-Teensy4.0/src/: bme680.h  main.cpp
Electronics/pcb/Main-Controller/: Main Controller.SchDoc
Electronics/pcb/Power-Management/: Assembly.OutJob  Mechanical_Design.OutJob  Power-Management-PCB.PcbDoc
Electronics/pcb/Sensors/: Sensors-PCB.PcbDoc  Sensors.BomDoc  Sensors.OutJob  Sensors.PrjPcb  Sensors.SchDoc
Electronics/pcb/User-Controller/: Electrical_Design.OutJob  User-Control.SchDoc  User-Controller.BomDoc  User-Controller.OutJob  User-Controller.PcbDoc  User-Controller.PrjPcb
Electronics/pcb_project_files/Main-Controller/: Fabrication.OutJob  Main-Controller-PCB.PcbDoc  Main-Controller.BomDoc  Main-Controller.OutJob  Main-Controller.PrjPcb
Electronics/pcb_project_files/PDF Schematic + BOM/: BOM.xlsx
Electronics/pcb_project_files/Power-Management/: Power Management.SchDoc  Power-Management.BomDoc  Power-Management.OutJob  Power-Management.PrjPcb
Interaction/: README.md  interaction.py  other.py  test.py
Interaction/PythonSerial/: serial_list.py
Interaction/test/: CMakeLists.txt
PythonSerial/: main.py  readkey.py  serial_handler.py
flir_one_node/: .gitignore  CMakeLists.txt  README.md  package.xml
flir_one_node/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
flir_one_node/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
flir_one_node/image_display/: get_temperature_from_pixel.m  image_display.m
flir_one_node/include/: control.h  driver_flir.h  usb_packet_driver.h
flir_one_node/info/flow_chart/: FLIR One ROS Driver.drawio
flir_one_node/launch/: flir_data_record.launch  flir_data_vis.launch
flir_one_node/src/: control.cpp  driver_flir.cpp  flir_one_node.cpp  usb_packet_driver.cpp
flir_one_node/v4l2loopback/: Makefile  README.md  bits.txt  chunk_checker.py  one_chunk.txt  one_chunk2.txt
flir_one_node/v4l2loopback/src/: flir8g-mint.c  flirone.c
test/: CMakeLists.txt  test.cpp  test3.cpp
